RESOLVED FIXED270361
Crash under ScrollingStateFixedNode::reconcileLayerPositionForViewportRect
https://bugs.webkit.org/show_bug.cgi?id=270361
Summary Crash under ScrollingStateFixedNode::reconcileLayerPositionForViewportRect
Nikos Mouchtaris
Reported 2024-03-01 10:55:52 PST
Crash under ScrollingStateFixedNode::reconcileLayerPositionForViewportRect
Attachments
Nikos Mouchtaris
Comment 1 2024-03-01 10:58:01 PST
Nikos Mouchtaris
Comment 2 2024-03-01 10:59:51 PST
EWS
Comment 3 2024-03-01 15:21:03 PST
Committed 275574@main (0c592c9b1e0c): <https://commits.webkit.org/275574@main> Reviewed commits have been landed. Closing PR #25354 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.