Crash under ScrollingStateFixedNode::reconcileLayerPositionForViewportRect https://bugs.webkit.org/show_bug.cgi?id=270361 rdar://105887621

Reviewed by Simon Fraser.

We need a similar fix to https://github.com/WebKit/WebKit/pull/17453 as there is
the same crash signature under ScrollingStateFixedNode::reconcileLayerPositionForViewportRect
this time.

* Source/WebCore/page/scrolling/ScrollingStateFixedNode.cpp:
(WebCore::ScrollingStateFixedNode::reconcileLayerPositionForViewportRect):

Canonical link: https://commits.webkit.org/275574@main