Source/WebCore/page/scrolling/ScrollingStateFixedNode.cpp
@@ -84,6 +84,10 @@ void ScrollingStateFixedNode::reconcileLayerPositionForViewportRect(const Layout
     FloatPoint position = m_constraints.layerPositionForViewportRect(viewportRect);
     if (layer().representsGraphicsLayer()) {
         RefPtr graphicsLayer = static_cast<GraphicsLayer*>(layer());
+        ASSERT(graphicsLayer);
+        // Crash data suggest that graphicsLayer can be null: rdar://105887621.
+        if (!graphicsLayer)
+            return;
 
         LOG_WITH_STREAM(Scrolling, stream << "ScrollingStateFixedNode " << scrollingNodeID() <<" reconcileLayerPositionForViewportRect " << action << " position of layer " << graphicsLayer->primaryLayerID() << " to " << position);
         
